[MODORDERS-1269] Stream.toList()